# mlboardkit

./: .gitignore  README.md  docs.md  model_deployment.py  pyproject.toml  requirements.txt  run_all_safe.sh  usage.md
analysis_tools/: __init__.py  compare_runs.py  experiment_tracker.py  feature_importance.py  metrics_utils.py  plot_metrics.py
automation/: __init__.py  pipeline_runner.py  scheduler_job.py  task_scheduler.py  workflow_engine.py
data_analysis/: __init__.py  data_profiler.py
data_utils/: __init__.py  csv_to_json.py  data_converter.py  data_label_inspector.py  data_sampler.py  dataset_processor.py  deduplicate.py  remove_duplicates.py  split_data.py
file_conversion/: __init__.py  format_json.py  json_to_csv.py  jsonl_splitter.py  merge_json_files.py  txt_to_jsonl.py
file_management/: __init__.py  compress_folder.py  project_organizer.py  smart_organizer.py
llm_experiments/: __init__.py  adversarial_prompting.py  alignment_metrics.py  jailbreak_tester.py  prompt_eval.py  response_consistency.py
misc/: __init__.py  cli_parser.py  config_manager.py  db_utilities.py  env_report.py  git_ml_workflow.py  logger_utils.py  timer.py
mlboardkit/: __init__.py
mlboardkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model_utils/: __init__.py  embedding_utils.py  evaluate_model.py  hp_search.py  model_card_generator.py  model_compression.py  model_convert.py  model_validator.py  reproducibility.py  seed_everything.py  train_model.py  training_setup.py
safety_utils/: __init__.py  red_teaming_tools.py  toxicity_filter.py
(+13 files in other folders)
